Added Scihub login dialog. New GUI for the searcher. Results now uses a view to show. Product footprint can be show in map